# multidocs

./: .gitignore  README.md  main.py  pyproject.toml
app/: config.py  database.py
app/agent/: engine.py  prompts.py  tools.py
app/api/: router.py  schemas.py
app/indexing/: loader.py  pipeline.py
app/telegram/: handlers.py  webhook.py
static/: index.html
